--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/estilos.css">
-  <title>Pre Entrega 1 - Alain Toledo</title>
+  <title>HARDMIKE Electronica</title>
 </head>
 
 <body>
